--- a/src/pages/Cart.css
+++ b/src/pages/Cart.css
@@ -1,87 +1,172 @@
 .cart-page {
-    padding: 20px;
-    max-width: 800px;
-    margin: 0 auto;
+  padding: 75px;
+  max-width: 800px;
+  margin: 0 auto;
+}
+.cart-page h1{
+  text-align: center;
+}
 
-  }
-  
-  .cart-items {
-    margin-bottom: 20px;
-  }
-  
-  .cart-item {
-    display: flex;
-    align-items: center;
-    border-bottom: 1px solid #eee;
-    padding: 10px 0;
-  }
-  
+.empty-cart {
+  text-align: center;
+  margin-top: 50px;
+}
+
+.empty-cart-icon {
+  width: 100px;
+  height: auto;
+  margin-bottom: 20px;
+  border-radius: 50%;
+}
+
+.empty-cart p {
+  font-size: 18px;
+  margin: 10px 0;
+}
+
+.go-to-products-button {
+  background-color: #ff69b4;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
+.go-to-products-button:hover {
+  background-color: #ff1493;
+}
+
+.cart-items {
+  margin-bottom: 20px;
+}
+
+.cart-item {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #eee;
+  padding: 10px 0;
+}
+
+.cart-item-image {
+  width: 80px;
+  height: 80px;
+  object-fit: cover;
+  margin-right: 20px;
+}
+
+.cart-item-details {
+  flex-grow: 1;
+}
+
+.quantity-control {
+  display: flex;
+  align-items: center;
+  font-weight: bold;
+  margin-top: 10px;
+}
+
+.quantity-control button {
+  background-color: #ff69b4;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+
+.quantity-control span {
+  margin: 0 10px;
+}
+
+.remove-button {
+  background-color: #ff1493;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+
+.cart-summary {
+  margin-top: 20px;
+  text-align: right;
+}
+
+.delivery-form {
+  margin-top: 20px;
+}
+
+.delivery-form input {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+.delivery-form select {
+  display: flex;
+  justify-self: center;
+  width: 100%; /* Alterado para 100% para responsividade */
+  padding: 10px;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.whatsapp-button {
+  background-color: #25d366;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  width: 100%;
+  margin-top: 20px;
+}
+
+.whatsapp-button:disabled {
+  background-color: #cccccc;
+  cursor: not-allowed;
+}
+
+/* Media Queries para Responsividade */
+@media (max-width: 768px) {
   .cart-item-image {
+    margin-bottom: 10px; /* Adiciona espaço abaixo da imagem */
+  }
+
+  .empty-cart-icon {
     width: 80px;
-    height: 80px;
-    object-fit: cover;
-    margin-right: 20px;
   }
-  
-  .cart-item-details {
-    flex-grow: 1;
-  }
-  
-  .quantity-control {
-    display: flex;
-    align-items: center;
-    margin-top: 10px;
-  }
-  
-  .quantity-control button {
-    background-color: #ff69b4;
-    color: white;
-    border: none;
-    padding: 5px 10px;
-    cursor: pointer;
-  }
-  
-  .quantity-control span {
-    margin: 0 10px;
-  }
-  
-  .remove-button {
-    background-color: #ff1493;
-    color: white;
-    border: none;
-    padding: 5px 10px;
-    cursor: pointer;
-  }
-  
-  .cart-summary {
-    margin-top: 20px;
-    text-align: right;
-  }
-  
-  .delivery-form {
-    margin-top: 20px;
-  }
-  
-  .delivery-form input {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-  }
-  
-  .whatsapp-button {
-    background-color: #25d366;
-    color: white;
-    border: none;
-    padding: 10px 20px;
+
+  .empty-cart p {
     font-size: 16px;
-    cursor: pointer;
+  }
+
+  .go-to-products-button {
     width: 100%;
-    margin-top: 20px;
+    font-size: 14px;
   }
-  
-  .whatsapp-button:disabled {
-    background-color: #cccccc;
-    cursor: not-allowed;
+
+  .quantity-control button {
+    width: 100%; /* Botões ocupam toda a largura */
+    margin-bottom: 5px; /* Espaço entre os botões */
   }
-  
-  
+
+  .remove-button {
+    width: 30%; /* Botão de remover ocupa toda a largura */
+    margin-top: 10px; /* Espaço acima do botão de remover */
+    font-size: 14px;
+  }
+
+  .cart-summary {
+    text-align: left; /* Alinha o resumo à esquerda */
+  }
+
+  .delivery-form select {
+    width: 100%; /* Garante que o select ocupe toda a largura */
+  }
+
+  .whatsapp-button {
+    font-size: 14px; /* Reduz o tamanho da fonte em telas pequenas */
+  }
+}
